# qpid-proton

./: .travis.yml  CMakeLists.txt  go.mod
.github/workflows/: build.yml
c/examples/: CMakeLists.txt
c/src/proactor/: libuv.c
c/src/sasl/: cyrus_sasl.c
c/tests/: threaderciser.c
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt  send-sasl.c
go/: CMakeLists.txt
go/examples/: README.md
go/examples/electron/: broker.go  receive.go  selected_recv.go  send.go
go/examples/proton/: broker.go
go/pkg/: README.md
go/pkg/amqp/: interop_test.go  marshal_test.go  message_test.go  types_test.go
go/pkg/electron/: auth_test.go  benchmark_test.go  common_test.go  connection.go  container.go  doc.go  electron_test.go  endpoint.go  example_client_server_test.go  handler.go  link.go  link_test.go  receiver.go  sender.go  session.go
go/pkg/proton/: message.go  proton_test.go  wrappers.go
go/src/qpid.apache.org/: go.mod
proton-c/: CMakeLists.txt
proton-c/bindings/: CMakeLists.txt
proton-c/bindings/javascript/: CMakeLists.txt
proton-c/src/core/: codec.c  max_align.h  transport.c
proton-c/src/reactor/io/posix/: io.c
proton-c/src/sasl/: cyrus_sasl.c
proton-c/src/ssl/: ssl_stub.c
proton-c/src/tests/: CMakeLists.txt
tests/tools/apps/c/: CMakeLists.txt
tools/cmake/Modules/: CheckClockGetTime.cmake  FindCyrusSASL.cmake  FindEmscripten.cmake
tools/cmake/toolchains/: emscripten.toolchain.cmake
